WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133528
SVGGlyphToPathTranslator ASSERTs when encountering a missing glyph in an SVG font
https://bugs.webkit.org/show_bug.cgi?id=133528
Summary
SVGGlyphToPathTranslator ASSERTs when encountering a missing glyph in an SVG ...
Myles C. Maxfield
Reported
2014-06-04 18:30:57 PDT
Currently an assert fires if you style text (possibly underlined, regarding text-decoration-skip: ink, and possibly not regarding simply drawing the text) and you supply a letter that is not contained within the SVG font.
Attachments
Patch
(6.80 KB, patch)
2014-06-11 17:32 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-04 18:45:03 PDT
<
rdar://problem/17166642
>
Myles C. Maxfield
Comment 2
2014-06-11 17:32:40 PDT
Created
attachment 232923
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-06-11 17:59:16 PDT
Comment on
attachment 232923
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232923&action=review
> Source/WebCore/platform/graphics/mac/FontMac.mm:548 > + // The advances will get all messed up if we do anything other than bail here. > + result.clear(); // Better to be consistent rather than half-correct
Maybe make the comments a bit less hilarious.
Myles C. Maxfield
Comment 4
2014-06-11 19:25:32 PDT
http://trac.webkit.org/changeset/169872
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug