SVGGlyphToPathTranslator ASSERTs when encountering a missing glyph in an SVG font https://bugs.webkit.org/show_bug.cgi?id=133528

Reviewed by Simon Fraser.

Source/WebCore:
Turns out this assertion is benign. We can take an early out of advance() (which
is then handled properly by Font::dashesForIntersectionsWithRect()

Test: svg/custom/skip-underline-missing-glyph.html

* platform/graphics/mac/FontMac.mm:
(WebCore::Font::dashesForIntersectionsWithRect): Rather than skip partial results,
don't skip anything at all to be consistent.
* rendering/svg/SVGTextRunRenderingContext.cpp:
(WebCore::SVGGlyphToPathTranslator::advance): Take an early out to avoid an ASSERT.

LayoutTests:
Make sure that no ASSERT occurs in this situation. In addition, make sure that the
whole element doesn't get skip:ink gaps. This will need to be updated when we
support SVG + non-SVG mixed runs.

* svg/custom/skip-underline-missing-glyph-expected.html: Added
* svg/custom/skip-underline-missing-glyph.html: Added

Canonical link: https://commits.webkit.org/151761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169872 268f45cc-cd09-0410-ab3c-d52691b4dbfc